@@ -2,7 +2,7 @@
     <parent>
         <artifactId>javaparser-parent</artifactId>
         <groupId>com.github.javaparser</groupId>
-        <version>2.3.1-SNAPSHOT</version>
+        <version>3.26.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -23,14 +23,34 @@
     </licenses>
 
     <properties>
-        <junit.version>4.13.1</junit.version>
-        <jbehave.version>3.9.3</jbehave.version>
+        <junit.version>4.13.2</junit.version>
+        <jbehave.version>4.8.3</jbehave.version>
+
+		<!-- Maven Plugins -->
+		<javacc-maven-plugin.version>2.6</javacc-maven-plugin.version>
+		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
+		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+		<maven-install-plugin.version>2.4</maven-install-plugin.version>
+		<maven-jar-plugin.version>2.4</maven-jar-plugin.version>
+		<maven-release-plugin.version>2.5.1</maven-release-plugin.version>
+        <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
+        <maven-jacoco-plugin.version>0.7.5.201505241946</maven-jacoco-plugin.version>
+        <maven-coveralls-plugin.version>3.1.0</maven-coveralls-plugin.version>
     </properties>
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
                 <executions>
                     <execution>
                         <id>jacoco-initialize</id>
@@ -77,7 +97,17 @@
         <dependency>
             <groupId>com.github.javaparser</groupId>
             <artifactId>javaparser-core</artifactId>
-            <version>${project.version}</version>
+            <version>3.26.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-symbol-solver-core</artifactId>
+            <version>3.26.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-core-serialization</artifactId>
+            <version>3.26.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -92,9 +122,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>de.codecentric</groupId>
+            <groupId>com.github.valfirst</groupId>
             <artifactId>jbehave-junit-runner</artifactId>
-            <version>1.1.0</version>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
